# Computer-On-Wheels

./: .bashrc  .catkin  .rosinstall  CTestConfiguration.ini  CTestTestfile.cmake  Check Obstacles Using Route Bounding Box.py  Initialization and Lane Offset Handling.py  Makefile  Project Report.docx  README.md  basic_agent.py  hardcoded & custom dest.py  run_carla_with_ros.sh  setup.sh
Artifacts/: Appendix-A Software Requirements Specifications (SRS)6.0.doc  Appendix-C.docx  Appendix-E Work Breakdown Structure.docx  Appendix-F Roles & Responsibility Matrix.docx  Check List for inspection.docx  Detailed UseCases.docx  FinalPresentation_ComputerOnWheels.pptx  Impelmented Requirements in Part 1.doc  Literature_Market Survey.docx  Progress Presentation_FYP1.pptx  Project Report.docx  Proposal Presentation.pptx  SRS5.0.doc  SRS6.0.doc  Template -  06 - Progress Presentation_FYP2.pptx  Template -  07 - Progress Presentation_FYP1.pptx
Documentation/: SRS4.0.doc
Project_documentation/: Brainstorming Diagram.odt
devel/: local_setup.sh
src/drivehub/: CMakeLists.txt  package.xml
src/drivehub/scripts/: EWAIN.py  EWAIN2.py  GraphOfLanes.py  Junction_logic.py  LanePandS.py  carla-vehicle-information.py  carla_spawn_vehicle.py  curve lanes.py  custom_destination.py  destroy_vehicle.py  dijkstra.py  dijkstraInCarla(roads).py  drivinglane.py  get_s_t.py  get_xml.py  hdg_road.py  lanegraph.py  map.py  original_path_following.py  pathlist.py  sensors.py  singleroad.py  spawn_vehicle.py  start-to-end.py  steering_angle.py  visualizeGraphOfRoadWithWeight.py
src/scripts/: COW.py
(+128 files in other folders)
